<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_image_height"
            android:scaleType="center"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_between_groups"
                android:fontFamily="cursive"
                android:text="@string/taste_the_happiness"
                android:textColor="@color/slogan_color"
                android:textSize="@dimen/slogan_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_groups"
                android:layout_marginLeft="@dimen/side_margin_description"
                android:layout_marginRight="@dimen/side_margin_description"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/description_color"
                android:textSize="@dimen/description_text_size" />

            <LinearLayout style="@style/Information_view">

                <ImageButton
                    android:id="@+id/location_button"
                    style="@style/ButtonImageSymbols"
                    android:background="@drawable/ripple_white_oval"
                    android:src="@drawable/home" />

                <TextView
                    style="@style/Information_text"
                    android:layout_width="wrap_content"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout style="@style/Information_view">

                <ImageButton
                    android:id="@+id/web_button"
                    style="@style/ButtonImageSymbols"
                    android:background="@drawable/ripple_white_oval"
                    android:src="@drawable/web" />

                <TextView
                    style="@style/Information_text"
                    android:layout_width="wrap_content"
                    android:text="@string/web" />
            </LinearLayout>

            <LinearLayout style="@style/Information_view">

                <ImageButton
                    android:id="@+id/phone_button"
                    style="@style/ButtonImageSymbols"
                    android:background="@drawable/ripple_white_oval"
                    android:src="@drawable/phone" />

                <TextView
                    style="@style/Information_text"
                    android:layout_width="wrap_content"
                    android:text="@string/phone" />
            </LinearLayout>

            <LinearLayout style="@style/Information_view">

                <ImageButton
                    android:id="@+id/mail_button"
                    style="@style/ButtonImageSymbols"
                    android:background="@drawable/ripple_white_oval"
                    android:src="@drawable/mail" />

                <TextView
                    style="@style/Information_text"
                    android:layout_width="wrap_content"
                    android:text="@string/mail" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>